// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-177 MuiOutlinedInput-root-162 MuiInputBase-colorSecondary-186 MuiOutlinedInput-colorSecondary-163 makeStyles-gasSelector-148 MuiInputBase-adornedStart-181 MuiOutlinedInput-adornedStart-166"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 makeStyles-gasIcon-149"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-151 MuiSelect-select-152 MuiSelect-selectMenu-155 MuiSelect-outlined-154 MuiInputBase-input-188 MuiOutlinedInput-input-172 MuiInputBase-inputAdornedStart-192 MuiOutlinedInput-inputAdornedStart-175"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-161"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 MuiSelect-icon-157 MuiSelect-iconOutlined-160"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-208 MuiOutlinedInput-notchedOutline-171"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-209"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-contained-224 makeStyles-walletButton-215 MuiButton-containedSecondary-226 MuiButton-disableElevation-227"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-217"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-241 MuiButton-iconSizeMedium-243"
                >
                  <div
                    class="makeStyles-walletDot-212 makeStyles-greenDot-214"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-296"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-249 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-253 makeStyles-mainPapers-250 MuiPaper-elevation0-256 MuiPaper-rounded-254"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-118 MuiTypography-h5-127"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-text-218 makeStyles-learnMore-252 MuiButton-textPrimary-219 MuiButton-textSizeSmall-231 MuiButton-sizeSmall-237 MuiButton-fullWidth-239"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-217"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-296"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-293 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-118 MuiTypography-body1-120"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-294 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-281 MuiSkeleton-rect-283 makeStyles-nftSkeleton-295 MuiSkeleton-pulse-285"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-294 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-281 MuiSkeleton-rect-283 makeStyles-nftSkeleton-295 MuiSkeleton-pulse-285"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-294 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-281 MuiSkeleton-rect-283 makeStyles-nftSkeleton-295 MuiSkeleton-pulse-285"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-177 MuiOutlinedInput-root-162 MuiInputBase-colorSecondary-186 MuiOutlinedInput-colorSecondary-163 makeStyles-gasSelector-148 MuiInputBase-adornedStart-181 MuiOutlinedInput-adornedStart-166"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 makeStyles-gasIcon-149"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-151 MuiSelect-select-152 MuiSelect-selectMenu-155 MuiSelect-outlined-154 MuiInputBase-input-188 MuiOutlinedInput-input-172 MuiInputBase-inputAdornedStart-192 MuiOutlinedInput-inputAdornedStart-175"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-161"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 MuiSelect-icon-157 MuiSelect-iconOutlined-160"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-208 MuiOutlinedInput-notchedOutline-171"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-209"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-contained-224 makeStyles-walletButton-215 MuiButton-containedSecondary-226 MuiButton-disableElevation-227"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-217"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-241 MuiButton-iconSizeMedium-243"
                >
                  <div
                    class="makeStyles-walletDot-212 makeStyles-greenDot-214"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-307"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-249 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-253 makeStyles-mainPapers-250 MuiPaper-elevation0-256 MuiPaper-rounded-254"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-118 MuiTypography-h5-127"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-118 MuiTypography-subtitle1-129"
                  >
                    <span
                      class="MuiSkeleton-root-281 MuiSkeleton-text-282 makeStyles-center-248 MuiSkeleton-pulse-285"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-text-218 makeStyles-learnMore-252 MuiButton-textPrimary-219 MuiButton-textSizeSmall-231 MuiButton-sizeSmall-237 MuiButton-fullWidth-239"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-217"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-307"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-293 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-118 MuiTypography-body1-120"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-294 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <div
                class="MuiPaper-root-253 makeStyles-paper-296 MuiPaper-elevation0-256 MuiPaper-rounded-254"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
                >
                  <div
                    class="MuiGrid-root-10 makeStyles-textCenter-298 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-nftImage-301"
                      loop=""
                      playsinline=""
                      preload="auto"
                      src="test.com"
                    />
                  </div>
                  <div
                    class="MuiGrid-root-10 makeStyles-statsContainer-304 MuiGrid-container-11 MuiGrid-item-12"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-195 makeStyles-soundIcon-303"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
                      />
                    </svg>
                    <div
                      class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <p
                        class="MuiTypography-root-118 makeStyles-textCenter-298 MuiTypography-body1-120"
                      >
                        test
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-299 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121 MuiTypography-colorTextSecondary-144"
                          >
                            Your Balance
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-300 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121"
                          >
                            50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-299 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121 MuiTypography-colorTextSecondary-144"
                          >
                            Remaining
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-300 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121"
                          >
                            50/50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-299 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121 MuiTypography-colorTextSecondary-144"
                          >
                            Redemption Value (bDIGG)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-300 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121"
                          >
                            0.00000
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-299 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121 MuiTypography-colorTextSecondary-144"
                          >
                            Redemption Value ($)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-300 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-118 MuiTypography-caption-121"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
                      >
                        <button
                          class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-contained-224 makeStyles-redeemButton-297 MuiBox-root-305 MuiBox-root-306 MuiButton-containedPrimary-225"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-217"
                          >
                            Redeem
                          </span>
                          <span
                            class="MuiTouchRipple-root-307"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-116"
        >
          <div
            class="makeStyles-headerContent-117"
          >
            <h2
              class="MuiTypography-root-118 MuiTypography-h2-124 MuiTypography-colorTextPrimary-143"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-118 MuiTypography-subtitle1-129 MuiTypography-colorTextSecondary-144"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-115"
          >
            <div
              class="MuiInputBase-root-177 MuiOutlinedInput-root-162 MuiInputBase-colorSecondary-186 MuiOutlinedInput-colorSecondary-163 makeStyles-gasSelector-148 MuiInputBase-adornedStart-181 MuiOutlinedInput-adornedStart-166"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 makeStyles-gasIcon-149"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-151 MuiSelect-select-152 MuiSelect-selectMenu-155 MuiSelect-outlined-154 MuiInputBase-input-188 MuiOutlinedInput-input-172 MuiInputBase-inputAdornedStart-192 MuiOutlinedInput-inputAdornedStart-175"
                role="button"
                tabindex="0"
              >
                25
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-161"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-195 MuiSelect-icon-157 MuiSelect-iconOutlined-160"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-208 MuiOutlinedInput-notchedOutline-171"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-209"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-contained-224 makeStyles-walletButton-215 MuiButton-containedSecondary-226 MuiButton-disableElevation-227"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-217"
              >
                Click to connect
                <span
                  class="MuiButton-endIcon-241 MuiButton-iconSizeMedium-243"
                >
                  <div
                    class="makeStyles-walletDot-212 makeStyles-redDot-213"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-281"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-249 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-253 makeStyles-mainPapers-250 MuiPaper-elevation0-256 MuiPaper-rounded-254"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-118 MuiTypography-body1-120"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <button
                    class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-contained-224 makeStyles-redeemButton-251 MuiButton-containedPrimary-225"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-217"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-281"
                    />
                  </button>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-245 MuiButton-root-216 MuiButton-text-218 makeStyles-learnMore-252 MuiButton-textPrimary-219 MuiButton-textSizeSmall-231 MuiButton-sizeSmall-237 MuiButton-fullWidth-239"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-217"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-281"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
